--- a/templates/home.html
+++ b/templates/home.html
@@ -1,1 +1,7 @@
+{% extends 'base.html' %}
+{% block content %}
+
 <h1>Hello {{name}} !!!!!, This is test page.</h1>
+   
+{% endblock content %}
+   
