--- a/templates/home.html
+++ b/templates/home.html
@@ -2,6 +2,18 @@
 {% block content %}
 
 <h1>Hello {{name}} !!!!!, This is test page.</h1>
+
+<form action="add">
+   <div class="text-center">
+      
+         Enter first Number : <input type="text" name="num1">
+      
+         Enter second Number : <input type="text" name="num2">
+      <div>
+         <input type="submit" value="Submit">
+      </div>
+   </div>
+</form>
    
 {% endblock content %}
    
